--- a/Demos/progressbar/concept.html
+++ b/Demos/progressbar/concept.html
@@ -8,15 +8,21 @@
 
     <style>
     .progress-container {
+        margin: 0px;
+        padding: 0px;
         width: 300px;
         height: 20px;
-        border: 3px solid black;
+        border: 1px solid gray;
+        border-radius: 5px;
+        font-size: 0;
+
     }
     .progress-bar {
         display: inline-block;
         width: 0%;
         height: 100%;
-        background-color: rgb(14, 14, 196);
+        background-color: #3A73B0;
+        font-size: 16px;
     }
 
     .section {
@@ -29,12 +35,16 @@
         animation-duration: 4s;
         animation-play-state: paused;
         animation-fill-mode: forwards;
+        
     }
 
     .button {
-        width: 100px;
-        height: 50px;
-        background-color: green;
+        width: 50px;
+        height: 20px;
+        background-color: gray;
+        margin-top: 50px;
+        border-radius: 5px;
+        color: white;
     }
     
     @keyframes jumping-bar{
@@ -69,14 +79,10 @@
 <body>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>     
 
-    <div id="bar" class="progress-container" data-currentIndx = "1">
-        <div class="section" data-section="1"  style="width:49%; height:100%;">
-                <div class="progress-bar"></div>
-        </div>
-        <div class="section" data-section="2" style="width:49%; height:100%">
-                <div class="progress-bar"></div>
-        </div>    
-    </div>
+    <ul id="bar" class="progress-container" data-currentIndx = "1">
+        <li class="section" data-section="1"  style="width:50%; height:100%;"><span class="progress-bar"></span></li>
+        <li class="section" data-section="2" style="width:50%; height:100%"><span class="progress-bar"></span></li>    
+    </ul>
 
     <div class="button" data-pauseanim="bar">Pause</div>
 
