Added sticky top menu

--- a/HomePage/index-home.html
+++ b/HomePage/index-home.html
@@ -27,10 +27,11 @@
                 <div class="slogan">Lightning quick .NET MVC5 CMS - Entreprise functionalities, quick, simple and hassel free.</div>
             </div>
         </header>
+        <div class="main">
         <div class="jumbotron-section">
             <div class="wrapper-center">
                 <div class="navigation-wrapper">
-                    <div class="danelion-menu"></div>
+                    <div class="dandelion-menu"></div>
                 </div>
             </div>
         </div>
@@ -48,6 +49,7 @@
             <div class="right-menu"></div>
             <div class="selected-feature"></div>
         </div>
+    </div>
         <footer>
             <div class="top top-left"></div>
             <div class="footer-text"></div>
