Finished middle layout

--- a/HomePage/index-home.html
+++ b/HomePage/index-home.html
@@ -131,13 +131,13 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col col-lg-3 item before-item"></div>
-                        <div class="col col-lg-3 item before-item"></div>
-                        <div class="col col-lg-3 item before-item"></div>
-                        <div class="col col-lg-3 item before-item"></div>
+                        <div class="col col-lg-3 item before-item first-last"></div>
+                        <div class="col col-lg-3 item before-item second-last"></div>
+                        <div class="col col-lg-3 item before-item third-last"></div>
+                        <div class="col col-lg-3 item before-item fourth-last"></div>
                     </div>
                     <div class="row">
-                        <div class="col col-lg-6 item item-left">
+                        <div class="col col-lg-6 item item-left last-left">
                             <div class="tree-item">
                                 <img class="icon" src="./images/circle.png" alt="">
                                 <div class="item-header">Envirement sync</div>
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-lg-6 item item-right">
+                        <div class="col col-lg-6 item item-right last-right">
                             <div class="tree-item">
                                 <img class="icon" src="./images/circle.png" alt="">
                                 <div class="item-header">Envirement sync</div>
