--- a/HomePage/index-home.html
+++ b/HomePage/index-home.html
@@ -163,15 +163,45 @@
                 </div>
             </div>
             <div class="features-section">
-                <div class="left-menu"></div>
-                <div class="right-menu"></div>
-                <div class="selected-feature"></div>
+                <div class="row">
+                    <div class="col col-lg-1">
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                    </div>
+                    <div class="col col-lg-10">
+                        <div class="selected-feature"></div>
+                    </div>
+                    <div class="col col-lg-1">
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
-            <div class="top top-left"></div>
-            <div class="footer-text"></div>
-            <div class="top top-right"></div>
+            <div class="row">
+                <div class="col col-lg-1">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-arrow-up"></span>
+                        <div>To top</div>
+                    </a>
+                </div>
+                <div class="col col-lg-10">
+                    <p>Sitetriks - a new generation cms</p>
+                </div>
+                <div class="col col-lg-1">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-arrow-up"></span>
+                        <div>To top</div>
+                    </a>
+                </div>
+            </div>
         </footer>
     </div>
 
