Fixed detailed menu bugs

--- a/HomePage/index-home.html
+++ b/HomePage/index-home.html
@@ -40,15 +40,25 @@
             </div>
             <div class="detailed-menu">
                 <div class="wrapper-detailed-menu">
-                    <div class="row">
-                        <div class="col col-lg-12 middle-box">
-                            <div class="entreprice-features">
-                                enterprice features
+                        <div class="row">
+                                <div class="col col-lg-6 before-middle-box"></div>
+                                <div class="col col-lg-6 before-middle-box"></div>                        
                             </div>
-                            <div class="entreprice-description">
-                                Available with SiteTriks's free basic license.
+                    <div class="row">
+                        <div class="col col-lg-12">
+                            <div id="middle-box">
+                                <div class="entreprice-features">
+                                    enterprice features
+                                </div>
+                                <div class="entreprice-description">
+                                    Available with SiteTriks's free basic license.
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-lg-6 after-middle-box"></div>
+                        <div class="col col-lg-6 after-middle-box"></div>                        
                     </div>
                     <div class="row">
                         <div class="col col-lg-3 item before-item"></div>
@@ -59,7 +69,8 @@
                     <div class="row">
                         <div class="col col-lg-6 item item-left">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
                                 <div class="item-header">Envirement sync</div>
                                 <div class="item-body">
                                     <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
@@ -75,7 +86,8 @@
                         </div>
                         <div class="col col-lg-6 item item-right">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
                                 <div class="item-header">Version control</div>
                                 <div class="item-body">
                                     <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
@@ -99,8 +111,9 @@
                     <div class="row">
                         <div class="col col-lg-6 item item-left">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
-                                <div class="item-header">Envirement sync</div>
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
+                                <div class="item-header">Dynamic content</div>
                                 <div class="item-body">
                                     <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                         ut labore et dolore magna aliqua. </p>
@@ -115,8 +128,9 @@
                         </div>
                         <div class="col col-lg-6 item item-right">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
-                                <div class="item-header">Envirement sync</div>
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
+                                <div class="item-header">Modular</div>
                                 <div class="item-body">
                                     <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                         ut labore et dolore magna aliqua. </p>
@@ -139,8 +153,9 @@
                     <div class="row">
                         <div class="col col-lg-6 item item-left last-left">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
-                                <div class="item-header">Envirement sync</div>
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
+                                <div class="item-header">See more...</div>
                                 <div class="item-body">
 
                                 </div>
@@ -148,8 +163,9 @@
                         </div>
                         <div class="col col-lg-6 item item-right last-right">
                             <div class="tree-item">
-                                <img class="icon" src="./images/circle.png" alt="">
-                                <div class="item-header">Envirement sync</div>
+                                <!-- <img class="icon" src="./images/circle.png" alt=""> -->
+                                <div class="icon"></div>
+                                <div class="item-header">See more...</div>
                                 <div class="item-body">
 
                                 </div>
