--- a/HomePage/index-home.html
+++ b/HomePage/index-home.html
@@ -32,6 +32,7 @@
             <div class="jumbotron-section">
                 <div class="wrapper-center">
                     <div class="dandelion-menu">
+                        <img class="logo-image" src="./images/Sitetriks_logo.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -43,7 +44,7 @@
                         <div class="row">
                                 <div class="col col-lg-6 before-middle-box"></div>
                                 <div class="col col-lg-6 before-middle-box"></div>                        
-                            </div>
+                        </div>
                     <div class="row">
                         <div class="col col-lg-12">
                             <div id="middle-box">
